--- a/index.css
+++ b/index.css
@@ -1,15 +1,47 @@
-/* #head{
-    color: brown;
+*{
+    padding: 0;
+    margin: 0;
 }
- #div1{ 
-    background-color: red;
+.header{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  background-color: rgb(252, 236, 215);
+}
+.logo{
+    width: 150px;  
+}
+.nav-items{
+ padding:0px 20px;
+}
+.nav-items ul{
+    list-style-type: none;
+    display: flex;
+   font-size: 24px;
+   
+   }
+   .nav-items > ul > li{
+       margin: 10px; 
+       padding: 40px;
+       /*  font-weight: 500; */
+}
+.res-card{
+    width: 230px;
+    padding: 5px;
+    margin: 5px;
+}
+.res-card:hover{
+    border: 1px solid black;
+    cursor: pointer;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.search{
+    padding:10px;
+}
+.res-logo{
     width: 100%;
-    height: 500px;
-    border: 1px solid black;
 }
-#div2{ 
-    background-color: green;
-    width: 10%;
-    height: 250px;
-    border: 1px solid black;
-} */
