--- a/index.css
+++ b/index.css
@@ -28,7 +28,8 @@
 .res-card{
     width: 230px;
     padding: 5px;
-    margin: 5px;
+    margin: 10px 5px;
+    
 }
 .res-card:hover{
     border: 1px solid black;
@@ -39,9 +40,13 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-.search{
+.filter{
     padding:10px;
+    margin: 10px;
+    cursor: pointer;
 }
 .res-logo{
     width: 100%;
+    height: 220px;
+    object-fit: contain;
 }
